--- a/public/test/a.html
+++ b/public/test/a.html
@@ -1,20 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <title>SimpleScrollbar</title>
-    <link rel="stylesheet" href="http://buzinas.github.io/simple-scrollbar/simple-scrollbar.css"></script>
-	    <script src="http://buzinas.github.io/simple-scrollbar/simple-scrollbar.min.js"></script>
-
-    <!--[if IE 9]><script src="https://cdn.jsdelivr.net/classlist/2014.01.31/classList.min.js"></script><![endif]-->
   </head>
   <body>
-    
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-    <section style="height: 300px; width: 500px; display: inline-block;" ss-container>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-      <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-    </section>
+			<div id="3" style="position:absolute;top:100px;left:100px;width:100px;height:100px;background:#DDD;"></div>
+			<div id="2" style="position:absolute;top:100px;left:100px;width:100px;height:100px;background:#DDD;"></div>
+			<div id="1" style="position:absolute;top:100px;left:100px;width:100px;height:100px;background:#DDD;"></div>
+		
+		<script>
+			var t	=	0;
+			document.onmousemove	=	function(e){
+				clearTimeout(t);
+				t = setTimeout(function(){
+					console.log(elementsFromPoint(e.clientX,e.clientY));
+				},100);
+			}
+			
+			
+			
+			function elementsFromPoint(x,y) {
+				var elements = [], previousPointerEvents = [], current, i, d;
+
+							// get all elements via elementFromPoint, and remove them from hit-testing in order
+				while ((current = document.elementFromPoint(x,y)) && elements.indexOf(current)===-1 && current != null) {
+
+									// push the element and its current style
+					elements.push(current);
+					previousPointerEvents.push({
+											value: current.style.getPropertyValue('pointer-events'),
+											priority: current.style.getPropertyPriority('pointer-events')
+									});
+
+									// add "pointer-events: none", to get to the underlying element
+					current.style.setProperty('pointer-events', 'none', 'important'); 
+				}
+
+							// restore the previous pointer-events values
+				for(i = previousPointerEvents.length; d=previousPointerEvents[--i]; ) {
+					elements[i].style.setProperty('pointer-events', d.value?d.value:'', d.priority); 
+				}
+
+							// return our results
+				return elements;
+			}
+
+		</script>
   </body>
 </html>
